# owasp_aibom_image

./: .dockerignore  Dockerfile  LICENSE  PROJECT_README.md  README.md  entrypoint.sh  pyproject.toml
src/: cli.py  config.py  main.py
src/controllers/: __init__.py  cli_controller.py  web_controller.py
src/models/: __init__.py  extractor.py  field_registry.json  gguf_metadata.py  model_file_extractors.py  registry.py  schemas.py  scoring.py  service.py
src/schemas/: bom-1.6.schema.json  bom-1.7.schema.json  spdx.schema.json
src/static/css/: style.css
src/static/js/: script.js
src/templates/: error.html  index.html  result.html
src/templates/includes/: footer.html  header.html
src/utils/: __init__.py  analytics.py  captcha.py  cleanup_utils.py  formatter.py  license_utils.py  rate_limiting.py  summarizer.py  validation.py
